--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
-    "nuxt": "^3.9.0",
-    "nuxt-icon": "^0.6.8",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vue": "^3.4.3",
-    "vue-router": "^4.2.5"
+    "@nuxt/icon": "^2.1.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.23",
+    "nuxt": "^4.2.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.0.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   }
 }
