--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "tailwindcss": "^4.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "dependencies": {
+    "@nuxtjs/i18n": "^10.2.1"
   }
 }
