--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/icon": "^2.1.1",
+    "@nuxtjs/seo": "^3.3.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.23",
