--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.5.0"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "^10.2.1"
+    "@nuxtjs/i18n": "^10.2.1",
+    "@storyblok/nuxt": "^8.2.3"
   }
 }
