--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^10.2.1",
     "@storyblok/nuxt": "^8.2.3",
+    "@vercel/analytics": "^1.6.1",
     "resend": "^6.7.0"
   }
 }
