chore: set up eslint with @nuxt/eslint module

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "typecheck": "nuxi typecheck"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^1.15.1",
     "@nuxt/icon": "^2.1.1",
     "@nuxtjs/seo": "^3.3.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.15",
     "@types/markdown-it": "^14.1.2",
     "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.0.0",
