--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
+    "nuxt-gtag": "^4.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.0.0",
     "vue": "^3.5.13",
